# patch-modulator

./: .gitignore  .pre-commit-config.yaml  README.md  load_modules.sh  load_ruff.sh  pyproject.toml
.github/workflows/: mypy-check.yml  tests.yaml
controllable_patching_striding/: __init__.py  ckm_tr2d_100M_example_script.sh  csm_tr2d_100M_example_script.sh  gpuxl_train.sbatch  rusty_train.sbatch  train.py
controllable_patching_striding/configs/: config.yaml
controllable_patching_striding/configs/checkpoint/: defaults.yaml  none.yaml
controllable_patching_striding/configs/data/: 2d_flexi_active_matter.yaml  2d_flexi_rayleigh_benard.yaml  MHD_256.yaml  MHD_64.yaml  TRL_2D.yaml  acoustic_scattering_maze_2d.yaml  active_matter.yaml  all_2d.yaml  convective_envelope_rsg.yaml  debug.yaml  euler_quadrants.yaml  helmholtz_staircase.yaml  pattern_formation.yaml  planetswe.yaml  post_neutron_star_merger.yaml  rayleigh_benard.yaml  rayleigh_taylor_instability.yaml  shear_flow.yaml  supernova_explosion_64.yaml  turbulence_gravity_cooling.yaml  turbulent_radiative_layer_2D.yaml  turbulent_radiative_layer_3D.yaml  viscoelastic_instability.yaml
controllable_patching_striding/configs/distribution/: ddp.yaml  fsdp.yaml  hsdp.yaml  local.yaml
controllable_patching_striding/configs/logger/: none.yaml  wandb.yaml
controllable_patching_striding/data/: __init__.py  mixed_dset_sampler.py  multidatamodule.py  multidataset.py  utils.py  well_to_multi_transformer.py
controllable_patching_striding/metrics/: SpectrumLossPlot.ipynb  __init__.py  bin0.csv  bin1.csv  bin2.csv  common.py  resample_mhd.py  run_resample_script.sh  spatial.py  spectral.py  test.ipynb  wandb_plots.py
controllable_patching_striding/models/: __init__.py  isotropic_model.py
controllable_patching_striding/trainer/: checkpoints.py  training.py  utils.py
controllable_patching_striding/utils/: data_registry.json  distribution_utils.py  download_script.py  experiment_utils.py  utils.py  write_data_registry.py
tests/: conftest.py  test_dataset.py  test_import.py  test_jitterer.py  test_training.py
(+54 files in other folders)
