[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["controllable_patching_striding"]

[project]
name = "controllable_patching_striding"
requires-python = ">=3.8"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "einops>=0.8,<0.9",
    "h5py>=3.9.0,<4",
    "hydra-core>=1.3,<2",
    "imageio>=2.25,<3",
    "matplotlib>=3.8,<4",
    "numpy==1.26.4",
    "pandas==2.2",
    "plotly>=5.0,<6",
    "the_well[benchmark] @ git+https://github.com/PolymathicAI/the_well.git@master",
    "timm>=1.0,<2",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "torchinfo>=1.8.0,<2",
    "wandb>=0.17.9"
]

[project.scripts]
the-well-download = "the_well.utils.download_script:main"

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
    "isort[colors]>=5.13.2",
    "pytest-order>=1.3.0",
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true